--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <main>
     </main>
-    <script src="bundle.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
