add meta descrips

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="">
   <head>
     <meta charset="utf-8" />
-    <title>laurencolls.com</title>
+    <meta name="description" content="Lauren Colls web developer based in Wellington, New Zealand">
+    <meta name="keywords" content="Lauren Colls, web developer, Wellington, New Zealand">
+    <meta name="author" content="Lauren Colls">
+    <title>Lauren Colls</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="index.css" rel="stylesheet" />
