--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="index.css" rel="stylesheet" />
-     <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/ > 
+     <link rel='shortcut icon' href='/images/favicon.ico' type='image/x-icon'/ > 
   </head>
   <body>
     <main>
