change title and meta tags

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="">
   <head>
     <meta charset="utf-8" />
-    <title>laurencolls.com</title>
+    <title>Lauren Colls - Web developer</title>
+    <meta name="description" content="Web Developer, Lauren Colls, based in Wellington, New Zealand. See Github, Resume/CV.">
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="index.css" rel="stylesheet" />
