--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Web Developer, Lauren Colls, based in Wellington, New Zealand. See Github, Resume/CV.">
     <meta name="author" content="Lauren Colls">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-site-verification" content="7xMRHBl2p-ma6bHiv0Fggly8EL_7Fbp7zdr3IbvvC84" />
     <link href="index.css" rel="stylesheet" />
     <link rel='shortcut icon' href='/images/favicon.ico' type='image/x-icon'/ > 
   </head>
